force-app/main/default/objects/Help_Desk_Ticket__c/Help_Desk_Ticket__c.object-meta.xml
<CustomObject>
    <description>Merit Help Desk Tickets</description>
    <label>Help Desk Ticket</label>
    <nameField>
        <displayFormat>H-{00000}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Desk Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>