force-app/main/default/objects/Help_Desk_Ticket__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Issue category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <label>Account Change / Add</label>
            </value>
            <value>
                <fullName>Account Team Add/Chane</fullName>
            </value>
            <value>
                <fullName>Code / Configuration Correction</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
                <label>Consultant Change / Add</label>
            </value>
            <value>
                <fullName>Contact Change</fullName>
            </value>
            <value>
                <fullName>Issues</fullName>
                <label>Customer Issues - Error</label>
            </value>
            <value>
                <fullName>Data correction</fullName>
            </value>
            <value>
                <fullName>Knowledge Library</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
                <label>Login Issue</label>
            </value>
            <value>
                <fullName>Membership Activity</fullName>
                <label>Membership Activity Change / Question</label>
            </value>
            <value>
                <fullName>Misc - Other</fullName>
            </value>
            <value>
                <fullName>New Field</fullName>
            </value>
            <value>
                <fullName>New List Views</fullName>
            </value>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
                <label>Reports Requests / Changes</label>
            </value>
            <value>
                <fullName>Role/Profile</fullName>
                <label>Role/Profile Update</label>
            </value>
            <value>
                <fullName>Shortcut</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
                <label>Tableau Access Request</label>
            </value>
            <value>
                <fullName>User Education</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>