force-app/main/default/objects/Help_Desk_Ticket__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date Issue is entered</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>