force-app/main/default/objects/Help_Desk_Ticket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of issue</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>254</length>
    <type>Text</type>
</CustomField>