force-app/main/default/objects/Help_Desk_Ticket__c/fields/Owner_Merit_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Merit_Team__c</fullName>
    <label>Assigned to - Merit Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark Flannery</fullName>
            </value>
            <value>
                <fullName>Lynn Killingbeck</fullName>
            </value>
            <value>
                <fullName>Michelle Dube</fullName>
                <label>Michele Dube</label>
            </value>
            <value>
                <fullName>Debbie Staves</fullName>
            </value>
            <value>
                <fullName>Satish Shivakulandai</fullName>
            </value>
            <value>
                <fullName>James Lane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>