force-app/main/default/objects/Help_Desk_Ticket__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSAD</fullName>
            </value>
            <value>
                <fullName>Direct from user</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Merit Inbox</fullName>
            </value>
            <value>
                <fullName>Merit Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>