force-app/main/default/objects/Help_Desk_Ticket__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Merit user who is experiencing the issue</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Help_Desk_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>