force-app/main/default/objects/Help_Desk_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Date_Closed__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Owner_Merit_Team__c</columns>
    <columns>Category__c</columns>
    <columns>Source__c</columns>
    <columns>User__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>